--- a/Homework Assignment 2.ipynb
+++ b/Homework Assignment 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "65141c7e",
+   "id": "79206804",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4634fb3",
+   "id": "b0b96b96",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee8c9bc4",
+   "id": "fdf37347",
    "metadata": {},
    "source": [
     "1B.  Given the following information for a product-mix problem with three products and three resources. \n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc1c82b9",
+   "id": "e674eef5",
    "metadata": {},
    "source": [
     "# Question 2: \n",
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a98aabc6",
+   "execution_count": 2,
+   "id": "7baeea14",
    "metadata": {},
    "outputs": [
     {
@@ -150,8 +150,8 @@
       "                                            .           73.00000       72.20000     500.00000   68600.00000 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
       "\n",
       "     3 Cars_and_trucks_take_up_type_1_machine_time\n",
-      "                    NS        .             .             .                -Inf          -Inf          -Inf\n",
-      "                                          50.00000        .            98.00000          +Inf   37440.00000 type_1_machines\n",
+      "                    NU        .             .               -Inf       -1.60000    -400.00000   31900.00000 Marketing_considerations_dictate_that_at_least_26_trucks_be_produced\n",
+      "                                         400.00000        .              .40000          +Inf   32700.00000 The_company_has_260_tons_of_steel_available\n",
       "\n",
       "     4 Marketing_considerations_dictate_that_at_least_26_trucks_be_produced\n",
       "                    BS      27.60000      -1.60000      26.00000       10.00000     -25.00000   31850.00000 Marketing_considerations_dictate_that_at_least_88_cars_be_produced\n",
@@ -210,9 +210,9 @@
     "prob2 += 300*cars + 400*trucks - (type_1_machines*50)\n",
     "\n",
     "# define constraints\n",
-    "prob2 += (.8*cars + trucks <= 98, 'Carco can rent up to 98 Type 1 machines')\n",
-    "prob2 += (.8*cars + trucks == type_1_machines, 'Cars and trucks take up type 1 machine time')\n",
-    "prob2 += (.6*cars + .7*trucks <= 73, 'Carco now has 73 Type 2 machines')\n",
+    "prob2 += (.8*cars + trucks - type_1_machines <= 0, 'Cars and trucks take up type 1 machine time')\n",
+    "prob2 += (type_1_machines <= 98, 'Carco can rent up to 98 Type 1 machines')\n",
+    "prob2 += (.6*cars + .7*trucks<= 73, 'Carco now has 73 Type 2 machines')\n",
     "prob2 += (2*cars + 3*trucks <= 260, 'The company has 260 tons of steel available')\n",
     "prob2 += (cars >= 88, 'Marketing considerations dictate that at least 88 cars be produced')\n",
     "prob2 += (trucks >= 26, 'Marketing considerations dictate that at least 26 trucks be produced')\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef31cf0d",
+   "id": "675a63c3",
    "metadata": {},
    "source": [
     "__Part C:  Answer the following questions from your output.  (Note, do not simply rerun the model – use the Linear \n",
@@ -244,17 +244,141 @@
     "i)  If cars contributed \\\\$310 to profit, what would be the new optimal solution to the problem?     \n",
     "* Since the objective range coefficient is between 0 and 320, in this case, increasing it to 310 will not change the number of cars or trucks produced, it will simply increase the profit.  So, since we are producing 88 cars in this model and we increased car profit by $10, 88 * 10 = 880, so the new profit/optimal solution would be \\\\$32540 + \\\\$880 = __\\\\$33420__\n",
     "\n",
-    "ii) What is the most that Carco should be willing to pay to rent an additional Type 1 machine for 1 day?     \n",
-    "iii) What is the most that Carco should be willing to pay for an extra ton of steel?    \n",
+    "ii) What is the most that Carco should be willing to pay to rent an additional Type 1 machine for 1 day?    \n",
+    "\\\\$350, since the shadow price in the sensitivity report provides this.  This means that any additional unit for one day of Type 1 machines will result in an increase optimal value of \\\\$350.  This is only valid for one additional unit.\n",
+    "\n",
+    "iii) What is the most that Carco should be willing to pay for an extra ton of steel?   \n",
+    "Nothing, since it will not impact the optimum value - the shadow price for steel is null.\n",
+    "\n",
     "iv) If Carco were required to produce at least 86 cars, what would Carco’s profit become?    \n",
-    "v) Carco is considering producing jeeps.  A jeep contributes $600 to profit and requires 1.2 days on machine 1, 2 \n",
-    "days on machine 2, and 4 tons of steel.  Should Carco produce any jeeps?    "
+    "It would increase by \\\\$40 to \\\\$32580, since we would produce more trucks.  Trucks are more profitable.  This is shown in the `Marketing_considerations_dictate_that_at_least_88_cars_be_produced` constraint, where each unit decrease for a car in this constraint, increases the objective by \\\\$20.\n",
+    "\n",
+    "v) Carco is considering producing jeeps.  A jeep contributes \\\\$600 to profit and requires 1.2 days on machine 1, 2 \n",
+    "days on machine 2, and 4 tons of steel.  Should Carco produce any jeeps?  \n",
+    "\n",
+    "No - the machine hours are too \"expensive\" in this case, as can be seen in the dual"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b151bbd6",
+   "metadata": {},
+   "source": [
+    "## Question 3: \n",
+    "\n",
+    "A catering company must have the following number of clean napkins available at the beginning of each of the next \n",
+    "four days:  day 1: 15, day 2: 12, day 3: 18, and day 4: 6.  After being used, a napkin can be cleaned by one of two \n",
+    "methods: fast service or slow service. Fast service costs \\\\$0.10 per napkin, and a napkin cleaned via fast service is \n",
+    "available for use the day after it is last used.  Slow service costs \\\\$0.06 per napkin, and a napkin cleaned via slow \n",
+    "service is available two days after they were last used.  New napkins can be purchased for a cost of \\\\$0.20 per \n",
+    "napkin. \n",
+    " \n",
+    "__Part A:  Formulate the problem as a minimum cost transportation problem.__     \n",
+    "__Part B:  Solve the problem (provide exact values for all variables and the optimal objective function).__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "741878f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Objective 6.8999999999999995\n",
+      "day1_fast_to_day_2 = 1\n",
+      "day1_fast_to_day_3 = 0\n",
+      "day1_fast_to_day_4 = 0\n",
+      "day1_slow_to_day_3 = 14\n",
+      "day1_slow_to_day_4 = 0\n",
+      "day2_fast_to_day_3 = 4\n",
+      "day2_fast_to_day_4 = 0\n",
+      "day2_slow_to_day_4 = 6\n",
+      "day3_fast_to_day_4 = 0\n",
+      "new_napkins_purchased_to_day_1 = 15\n",
+      "new_napkins_purchased_to_day_2 = 11\n",
+      "new_napkins_purchased_to_day_3 = 0\n",
+      "new_napkins_purchased_to_day_4 = 0\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem\n",
+    "# define variables\n",
+    "day1_new_nap = LpVariable(\"new_napkins_purchased_to_day_1\", 0, None, cat='Integer')\n",
+    "day2_new_nap = LpVariable(\"new_napkins_purchased_to_day_2\", 0, None, cat='Integer')\n",
+    "day3_new_nap = LpVariable(\"new_napkins_purchased_to_day_3\", 0, None, cat='Integer')\n",
+    "day4_new_nap = LpVariable(\"new_napkins_purchased_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day1_fast_to_2 = LpVariable(\"day1_fast_to_day_2\", 0, None, cat='Integer')\n",
+    "day1_fast_to_3 = LpVariable(\"day1_fast_to_day_3\", 0, None, cat='Integer')\n",
+    "day1_fast_to_4 = LpVariable(\"day1_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day2_fast_to_3 = LpVariable(\"day2_fast_to_day_3\", 0, None, cat='Integer')\n",
+    "day2_fast_to_4 = LpVariable(\"day2_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day3_fast_to_4 = LpVariable(\"day3_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day1_slow_to_3 = LpVariable(\"day1_slow_to_day_3\", 0, None, cat='Integer')\n",
+    "day1_slow_to_4 = LpVariable(\"day1_slow_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day2_slow_to_4 = LpVariable(\"day2_slow_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# defines the problem\n",
+    "napkin_prob = LpProblem(\"Napkin Problem\", LpMinimize)\n",
+    "\n",
+    "# define objective function - Maximize profit\n",
+    "napkin_prob += (.1*(day1_fast_to_2 + day1_fast_to_3 + day1_fast_to_4 + day2_fast_to_3 \n",
+    "                    + day2_fast_to_4 + day3_fast_to_4) + \n",
+    "                .06*(day1_slow_to_3 + day1_slow_to_4 + day2_slow_to_4) + \n",
+    "                .2*(day1_new_nap + day2_new_nap + day3_new_nap + day4_new_nap))\n",
+    "\n",
+    "# define constraints\n",
+    "## We must have the following number of clean napkins available at the beginning of each of the next four days\n",
+    "napkin_prob += (day1_new_nap >= 15, 'day 1 15') ## assumes we have to buy all new napkins to start\n",
+    "napkin_prob += (day1_fast_to_2 + day2_new_nap >= 12, 'day 2 12')\n",
+    "napkin_prob += (day1_fast_to_3 + day2_fast_to_3 + day1_slow_to_3 +  day3_new_nap >= 18, 'day 3 18')\n",
+    "napkin_prob += (day1_fast_to_4 + day2_fast_to_4 + day3_fast_to_4 + day1_slow_to_4 + \n",
+    "                day2_slow_to_4 >= 6, 'day 4 6')\n",
+    "\n",
+    "napkin_prob += (day1_fast_to_2 + day1_fast_to_3 + day1_fast_to_4 + \n",
+    "                day1_slow_to_3  + day1_slow_to_4 <= day1_new_nap, 'day 1 napkins must exist') \n",
+    "napkin_prob += (day2_new_nap - day2_fast_to_3 - day2_fast_to_4 - day2_slow_to_4\n",
+    "                >= 0, 'day 2 napkins must exist') \n",
+    "napkin_prob += (day3_new_nap - day3_fast_to_4 >= 0, 'day 3 napkins must exist') \n",
+    "\n",
+    "# solve the problem\n",
+    "napkin_prob.writeLP(\"napkin_prob.lp\")\n",
+    "napkin_prob.solve(GLPK(msg=0))\n",
+    "print (\"Status:\", LpStatus[napkin_prob.status])\n",
+    "\n",
+    "# Note, we are only able to get sensitivity information because we are solving\n",
+    "# as a linear program.  If we solved as an Integer Program, then no \n",
+    "# sensitivity information would be available.\n",
+    "print (\"Objective\", value(napkin_prob.objective))\n",
+    "for v in napkin_prob.variables():\n",
+    "    print(v.name, \"=\", v.varValue)\n",
+    "print (\"\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc53e062",
+   "id": "637a243c",
    "metadata": {},
    "outputs": [],
    "source": []
