--- a/Week 4 Discussion-Networks, Duality, Sensitivity.ipynb
+++ b/Week 4 Discussion-Networks, Duality, Sensitivity.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cb207adc",
+   "execution_count": 53,
+   "id": "d5c6b068",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize, GLPK, PULP_CBC_CMD"
+    "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize, GLPK, PULP_CBC_CMD\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c7666922",
+   "id": "0c681b2c",
    "metadata": {},
    "source": [
     "__Part 1.__\n",
@@ -30,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "abc3a4d7",
+   "execution_count": 57,
+   "id": "bbbb8515",
    "metadata": {
     "scrolled": false
    },
@@ -231,10 +232,6 @@
     "                jacksonville_port_to_atlanta_distributor >= -300, \n",
     "                '_300 cars are available in Jacksonville')\n",
     "\n",
-    "## Greater than 0 constraints\n",
-    "#for v in bmc_problem.variables():\n",
-    "#    bmc_problem += (v >= 0, f\"{v.name} Non-negative Constraint\")\n",
-    "\n",
     "# solve the problem\n",
     "bmc_problem.writeLP(\"bmc_problem.lp\")\n",
     "\n",
@@ -242,9 +239,6 @@
     "bmc_problem.solve(GLPK(msg=0, options=['--ranges', 'bmc_problem.sen']))\n",
     "print(\"Status:\", LpStatus[bmc_problem.status])\n",
     "\n",
-    "# Note, we are only able to get sensitivity information because we are solving\n",
-    "# as a linear program.  If we solved as an Integer Program, then no \n",
-    "# sensitivity information would be available.\n",
     "print(f\"Minimum cost: {'${:,.2f}'.format(value(bmc_problem.objective))}\")  ## formats automatically with commas at thou\n",
     "for v in bmc_problem.variables():\n",
     "    print(f'Number of {v.name} = {v.varValue + 0}') # + 0 ensures no negative zeros\n",
@@ -256,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1405ffc3",
+   "id": "b743df36",
    "metadata": {},
    "source": [
     "__Conduct sensitivity analysis and interpret__\n",
@@ -269,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d539b681",
+   "id": "ed5b9917",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8873344",
+   "id": "fd514578",
    "metadata": {},
    "source": [
     "Provide the duals and demonstrate strong duality (i.e., complementary slackness).\n",
@@ -325,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bab41a5",
+   "id": "b8171353",
    "metadata": {},
    "source": [
     "__Part 2.  A property of strong duality (complementary slackness) is that the sum product of costs X variables in the primal equal the sum product of RHS parameters X duals.  Under what circumstances does this NOT hold?__\n",
@@ -336,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7d566af",
+   "id": "3306b6ea",
    "metadata": {},
    "outputs": [],
    "source": []
