--- a/Homework Assignment 2.ipynb
+++ b/Homework Assignment 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "79206804",
+   "id": "c413c863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0b96b96",
+   "id": "5888d2c4",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdf37347",
+   "id": "9be611b7",
    "metadata": {},
    "source": [
     "1B.  Given the following information for a product-mix problem with three products and three resources. \n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e674eef5",
+   "id": "c101caa2",
    "metadata": {},
    "source": [
     "# Question 2: \n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7baeea14",
+   "id": "f2388b7c",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "# Problem\n",
+    "# Problem 2\n",
     "# define variables\n",
     "cars = LpVariable(\"cars\", 0, None)\n",
     "trucks = LpVariable(\"trucks\", 0, None)\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675a63c3",
+   "id": "675c0b39",
    "metadata": {},
    "source": [
     "__Part C:  Answer the following questions from your output.  (Note, do not simply rerun the model – use the Linear \n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b151bbd6",
+   "id": "c6773301",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "741878f0",
+   "id": "85eb9b37",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "# Problem\n",
+    "# Problem 3\n",
     "# define variables\n",
     "day1_new_nap = LpVariable(\"new_napkins_purchased_to_day_1\", 0, None, cat='Integer')\n",
     "day2_new_nap = LpVariable(\"new_napkins_purchased_to_day_2\", 0, None, cat='Integer')\n",
@@ -376,12 +376,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90580145",
+   "metadata": {},
+   "source": [
+    "## Question 4: \n",
+    "\n",
+    "A university has three professors who each teach four courses per year.  Each year, four sections of marketing, \n",
+    "finance, and production must be offered.  At least one section of each class must be offered during each semester \n",
+    "(fall and spring).  Each professor’s time preferences and preference for teaching various courses are given below. \n",
+    " \n",
+    "The total satisfaction a professor earns teaching a class is the sum of the semester satisfaction and the course \n",
+    "satisfaction.  Thus, professor 1 derives a satisfaction of 3 + 6 = 9 from teaching marketing during the fall semester. \n",
+    " \n",
+    "Part A:  Formulate the problem as a minimum cost network flow problem that can be used to assign professors to \n",
+    "courses so as to maximize the total satisfaction of the three professors.  Draw the network and identify the nodes \n",
+    "and arcs. \n",
+    " \n",
+    "Part B:  Solve the problem (provide exact values for all variables and the optimal objective function). \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "637a243c",
+   "id": "b2ef8307",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Problem 4\n",
+    "# define variables\n",
+    "day1_new_nap = LpVariable(\"new_napkins_purchased_to_day_1\", 0, None, cat='Integer')\n",
+    "day2_new_nap = LpVariable(\"new_napkins_purchased_to_day_2\", 0, None, cat='Integer')\n",
+    "day3_new_nap = LpVariable(\"new_napkins_purchased_to_day_3\", 0, None, cat='Integer')\n",
+    "day4_new_nap = LpVariable(\"new_napkins_purchased_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day1_fast_to_2 = LpVariable(\"day1_fast_to_day_2\", 0, None, cat='Integer')\n",
+    "day1_fast_to_3 = LpVariable(\"day1_fast_to_day_3\", 0, None, cat='Integer')\n",
+    "day1_fast_to_4 = LpVariable(\"day1_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day2_fast_to_3 = LpVariable(\"day2_fast_to_day_3\", 0, None, cat='Integer')\n",
+    "day2_fast_to_4 = LpVariable(\"day2_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day3_fast_to_4 = LpVariable(\"day3_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day1_slow_to_3 = LpVariable(\"day1_slow_to_day_3\", 0, None, cat='Integer')\n",
+    "day1_slow_to_4 = LpVariable(\"day1_slow_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "day2_slow_to_4 = LpVariable(\"day2_slow_to_day_4\", 0, None, cat='Integer')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# defines the problem\n",
+    "napkin_prob = LpProblem(\"Napkin Problem\", LpMinimize)\n",
+    "\n",
+    "# define objective function - Maximize profit\n",
+    "napkin_prob += (.1*(day1_fast_to_2 + day1_fast_to_3 + day1_fast_to_4 + day2_fast_to_3 \n",
+    "                    + day2_fast_to_4 + day3_fast_to_4) + \n",
+    "                .06*(day1_slow_to_3 + day1_slow_to_4 + day2_slow_to_4) + \n",
+    "                .2*(day1_new_nap + day2_new_nap + day3_new_nap + day4_new_nap))\n",
+    "\n",
+    "# define constraints\n",
+    "## We must have the following number of clean napkins available at the beginning of each of the next four days\n",
+    "napkin_prob += (day1_new_nap >= 15, 'day 1 15') ## assumes we have to buy all new napkins to start\n",
+    "napkin_prob += (day1_fast_to_2 + day2_new_nap >= 12, 'day 2 12')\n",
+    "napkin_prob += (day1_fast_to_3 + day2_fast_to_3 + day1_slow_to_3 +  day3_new_nap >= 18, 'day 3 18')\n",
+    "napkin_prob += (day1_fast_to_4 + day2_fast_to_4 + day3_fast_to_4 + day1_slow_to_4 + \n",
+    "                day2_slow_to_4 >= 6, 'day 4 6')\n",
+    "\n",
+    "napkin_prob += (day1_fast_to_2 + day1_fast_to_3 + day1_fast_to_4 + \n",
+    "                day1_slow_to_3  + day1_slow_to_4 <= day1_new_nap, 'day 1 napkins must exist') \n",
+    "napkin_prob += (day2_new_nap - day2_fast_to_3 - day2_fast_to_4 - day2_slow_to_4\n",
+    "                >= 0, 'day 2 napkins must exist') \n",
+    "napkin_prob += (day3_new_nap - day3_fast_to_4 >= 0, 'day 3 napkins must exist') \n",
+    "\n",
+    "# solve the problem\n",
+    "napkin_prob.writeLP(\"napkin_prob.lp\")\n",
+    "napkin_prob.solve(GLPK(msg=0))\n",
+    "print (\"Status:\", LpStatus[napkin_prob.status])\n",
+    "\n",
+    "# Note, we are only able to get sensitivity information because we are solving\n",
+    "# as a linear program.  If we solved as an Integer Program, then no \n",
+    "# sensitivity information would be available.\n",
+    "print (\"Objective\", value(napkin_prob.objective))\n",
+    "for v in napkin_prob.variables():\n",
+    "    print(v.name, \"=\", v.varValue)\n",
+    "print (\"\")"
+   ]
   }
  ],
  "metadata": {
