--- a/Homework Assignment 2.ipynb
+++ b/Homework Assignment 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c413c863",
+   "id": "b4a1c872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5888d2c4",
+   "id": "08e60a06",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9be611b7",
+   "id": "8250f72e",
    "metadata": {},
    "source": [
     "1B.  Given the following information for a product-mix problem with three products and three resources. \n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c101caa2",
+   "id": "ca71117a",
    "metadata": {},
    "source": [
     "# Question 2: \n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f2388b7c",
+   "id": "8df447b5",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675c0b39",
+   "id": "b1bb26e7",
    "metadata": {},
    "source": [
     "__Part C:  Answer the following questions from your output.  (Note, do not simply rerun the model – use the Linear \n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6773301",
+   "id": "224aa30b",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85eb9b37",
+   "id": "400d7262",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90580145",
+   "id": "fd39ec3b",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -392,75 +392,152 @@
     "Part A:  Formulate the problem as a minimum cost network flow problem that can be used to assign professors to \n",
     "courses so as to maximize the total satisfaction of the three professors.  Draw the network and identify the nodes \n",
     "and arcs. \n",
+    "\n",
+    "|                   |Professor 1|Professor 2|Professor 3|\n",
+    "|-------------------|-----------|-----------|-----------|\n",
+    "|Fall Preference    |3          |5          |4          |\n",
+    "|Spring Preference  |4          |3          |4          |\n",
+    "|Marketing          |6          |4          |5          |\n",
+    "|Finance            |5          |6          |4          |\n",
+    "|Production         |4          |5          |6          |\n",
+    "\n",
+    "![alt text](Homework2_Professor_Problem-Professor_Problem.drawio.png \"BMC\")\n",
     " \n",
     "Part B:  Solve the problem (provide exact values for all variables and the optimal objective function). \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b2ef8307",
+   "execution_count": 20,
+   "id": "22765a3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Objective 142\n",
+      "Professor_1_Fall_Finance = 0\n",
+      "Professor_1_Fall_Marketing = 0\n",
+      "Professor_1_Fall_Production = 0\n",
+      "Professor_1_Spring_Finance = 3\n",
+      "Professor_1_Spring_Marketing = 1\n",
+      "Professor_1_Spring_Production = 0\n",
+      "Professor_2_Fall_Finance = 1\n",
+      "Professor_2_Fall_Marketing = 2\n",
+      "Professor_2_Fall_Production = 1\n",
+      "Professor_2_Spring_Finance = 0\n",
+      "Professor_2_Spring_Marketing = 0\n",
+      "Professor_2_Spring_Production = 0\n",
+      "Professor_3_Fall_Finance = 0\n",
+      "Professor_3_Fall_Marketing = 0\n",
+      "Professor_3_Fall_Production = 0\n",
+      "Professor_3_Spring_Finance = 0\n",
+      "Professor_3_Spring_Marketing = 1\n",
+      "Professor_3_Spring_Production = 3\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/robords/.venv/basic_linear_programming/lib/python3.9/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Problem 4\n",
-    "# define variables\n",
-    "day1_new_nap = LpVariable(\"new_napkins_purchased_to_day_1\", 0, None, cat='Integer')\n",
-    "day2_new_nap = LpVariable(\"new_napkins_purchased_to_day_2\", 0, None, cat='Integer')\n",
-    "day3_new_nap = LpVariable(\"new_napkins_purchased_to_day_3\", 0, None, cat='Integer')\n",
-    "day4_new_nap = LpVariable(\"new_napkins_purchased_to_day_4\", 0, None, cat='Integer')\n",
+    "# define variables - each arc is a variable\n",
     "\n",
-    "day1_fast_to_2 = LpVariable(\"day1_fast_to_day_2\", 0, None, cat='Integer')\n",
-    "day1_fast_to_3 = LpVariable(\"day1_fast_to_day_3\", 0, None, cat='Integer')\n",
-    "day1_fast_to_4 = LpVariable(\"day1_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "P1_Fall_Marketing = LpVariable(\"Professor 1 Fall Marketing\", 0, None, cat='Integer')  \n",
+    "P1_Fall_Finance = LpVariable(\"Professor 1 Fall Finance\", 0, None, cat='Integer')\n",
+    "P1_Fall_Production = LpVariable(\"Professor 1 Fall Production\", 0, None, cat='Integer')\n",
+    "P1_Spring_Marketing = LpVariable(\"Professor 1 Spring Marketing\", 0, None, cat='Integer')\n",
+    "P1_Spring_Finance = LpVariable(\"Professor 1 Spring Finance\", 0, None, cat='Integer')\n",
+    "P1_Spring_Production = LpVariable(\"Professor 1 Spring Production\", 0, None, cat='Integer')\n",
     "\n",
-    "day2_fast_to_3 = LpVariable(\"day2_fast_to_day_3\", 0, None, cat='Integer')\n",
-    "day2_fast_to_4 = LpVariable(\"day2_fast_to_day_4\", 0, None, cat='Integer')\n",
+    "P2_Fall_Marketing = LpVariable(\"Professor 2 Fall Marketing\", 0, None, cat='Integer')  \n",
+    "P2_Fall_Finance = LpVariable(\"Professor 2 Fall Finance\", 0, None, cat='Integer')\n",
+    "P2_Fall_Production = LpVariable(\"Professor 2 Fall Production\", 0, None, cat='Integer')\n",
+    "P2_Spring_Marketing = LpVariable(\"Professor 2 Spring Marketing\", 0, None, cat='Integer')\n",
+    "P2_Spring_Finance = LpVariable(\"Professor 2 Spring Finance\", 0, None, cat='Integer')\n",
+    "P2_Spring_Production = LpVariable(\"Professor 2 Spring Production\", 0, None, cat='Integer')\n",
     "\n",
-    "day3_fast_to_4 = LpVariable(\"day3_fast_to_day_4\", 0, None, cat='Integer')\n",
-    "\n",
-    "day1_slow_to_3 = LpVariable(\"day1_slow_to_day_3\", 0, None, cat='Integer')\n",
-    "day1_slow_to_4 = LpVariable(\"day1_slow_to_day_4\", 0, None, cat='Integer')\n",
-    "\n",
-    "day2_slow_to_4 = LpVariable(\"day2_slow_to_day_4\", 0, None, cat='Integer')\n",
-    "\n",
+    "P3_Fall_Marketing = LpVariable(\"Professor 3 Fall Marketing\", 0, None, cat='Integer')  \n",
+    "P3_Fall_Finance = LpVariable(\"Professor 3 Fall Finance\", 0, None, cat='Integer')\n",
+    "P3_Fall_Production = LpVariable(\"Professor 3 Fall Production\", 0, None, cat='Integer')\n",
+    "P3_Spring_Marketing = LpVariable(\"Professor 3 Spring Marketing\", 0, None, cat='Integer')\n",
+    "P3_Spring_Finance = LpVariable(\"Professor 3 Spring Finance\", 0, None, cat='Integer')\n",
+    "P3_Spring_Production = LpVariable(\"Professor 3 Spring Production\", 0, None, cat='Integer')\n",
     "\n",
     "\n",
     "# defines the problem\n",
-    "napkin_prob = LpProblem(\"Napkin Problem\", LpMinimize)\n",
+    "professor_problem = LpProblem(\"Professor Problem\", LpMaximize)\n",
     "\n",
-    "# define objective function - Maximize profit\n",
-    "napkin_prob += (.1*(day1_fast_to_2 + day1_fast_to_3 + day1_fast_to_4 + day2_fast_to_3 \n",
-    "                    + day2_fast_to_4 + day3_fast_to_4) + \n",
-    "                .06*(day1_slow_to_3 + day1_slow_to_4 + day2_slow_to_4) + \n",
-    "                .2*(day1_new_nap + day2_new_nap + day3_new_nap + day4_new_nap))\n",
+    "# define objective function - Maximize Satisfaction\n",
     "\n",
-    "# define constraints\n",
-    "## We must have the following number of clean napkins available at the beginning of each of the next four days\n",
-    "napkin_prob += (day1_new_nap >= 15, 'day 1 15') ## assumes we have to buy all new napkins to start\n",
-    "napkin_prob += (day1_fast_to_2 + day2_new_nap >= 12, 'day 2 12')\n",
-    "napkin_prob += (day1_fast_to_3 + day2_fast_to_3 + day1_slow_to_3 +  day3_new_nap >= 18, 'day 3 18')\n",
-    "napkin_prob += (day1_fast_to_4 + day2_fast_to_4 + day3_fast_to_4 + day1_slow_to_4 + \n",
-    "                day2_slow_to_4 >= 6, 'day 4 6')\n",
+    "professor_problem += ((3+6)*P1_Fall_Marketing + (3+5)*P1_Fall_Finance + (3+4)*P1_Fall_Production +\n",
+    "                      (4+6)*P1_Spring_Marketing + (4+5)*P1_Spring_Finance + (4+4)*P1_Spring_Production +\n",
+    "                      (5+4)*P2_Fall_Marketing + (5+6)*P2_Fall_Finance + (5+5)*P2_Fall_Production +\n",
+    "                      (3+4)*P2_Spring_Marketing + (3+6)*P1_Spring_Finance + (3+5)*P2_Spring_Production +\n",
+    "                      (4+5)*P3_Fall_Marketing + (4+4)*P3_Fall_Finance + (4+6)*P3_Fall_Production +\n",
+    "                      (4+5)*P3_Spring_Marketing + (4+4)*P3_Spring_Finance + (4+6)*P3_Spring_Production)\n",
+    "                      \n",
+    "# define constraints - Each Node is a constraint\n",
     "\n",
-    "napkin_prob += (day1_fast_to_2 + day1_fast_to_3 + day1_fast_to_4 + \n",
-    "                day1_slow_to_3  + day1_slow_to_4 <= day1_new_nap, 'day 1 napkins must exist') \n",
-    "napkin_prob += (day2_new_nap - day2_fast_to_3 - day2_fast_to_4 - day2_slow_to_4\n",
-    "                >= 0, 'day 2 napkins must exist') \n",
-    "napkin_prob += (day3_new_nap - day3_fast_to_4 >= 0, 'day 3 napkins must exist') \n",
+    "## A university has three professors who each teach four courses per year.\n",
+    "professor_problem += (-P1_Fall_Marketing - P1_Fall_Finance - P1_Fall_Production -\n",
+    "                      P1_Spring_Marketing - P1_Spring_Finance - P1_Spring_Production == -4, \n",
+    "                      'Professor 1 teaches four courses a year') \n",
+    "professor_problem += (-P2_Fall_Marketing - P2_Fall_Finance - P2_Fall_Production -\n",
+    "                      P2_Spring_Marketing - P2_Spring_Finance - P2_Spring_Production == -4, \n",
+    "                      'Professor 2 teaches four courses a year') \n",
+    "professor_problem += (-P3_Fall_Marketing - P3_Fall_Finance - P3_Fall_Production -\n",
+    "                      P3_Spring_Marketing - P3_Spring_Finance - P3_Spring_Production == -4, \n",
+    "                      'Professor 3 teaches four courses a year')  \n",
+    "\n",
+    "# At least one section of each class must be offered during each semester (fall and spring).\n",
+    "professor_problem += (P1_Fall_Marketing + P2_Fall_Marketing + P3_Fall_Marketing >= 1,\n",
+    "                      'One section of Marketing every fall')\n",
+    "professor_problem += (P1_Fall_Finance + P2_Fall_Finance + P3_Fall_Finance >= 1,\n",
+    "                      'One section of Finance per every fall')\n",
+    "professor_problem += (P1_Fall_Production + P2_Fall_Production + P3_Fall_Production >= 1,\n",
+    "                      'One section of Production per every fall')\n",
+    "\n",
+    "professor_problem += (P1_Spring_Marketing + P2_Spring_Marketing + P3_Spring_Marketing >= 1,\n",
+    "                      'One section of Marketing every spring')\n",
+    "professor_problem += (P1_Spring_Finance + P2_Spring_Finance + P3_Spring_Finance >= 1,\n",
+    "                      'One section of Finance per every spring')\n",
+    "professor_problem += (P1_Spring_Production + P2_Spring_Production + P3_Spring_Production >= 1,\n",
+    "                      'One section of Production per every spring')\n",
+    "\n",
+    "# Each year, four sections of marketing, finance, and production must be offered\n",
+    "professor_problem += (P1_Fall_Marketing + P1_Spring_Marketing + P2_Fall_Marketing + \n",
+    "                      P2_Spring_Marketing + P3_Fall_Marketing + P3_Spring_Marketing >= 4,\n",
+    "                      'Four sections of marketing per year')\n",
+    "professor_problem += (P1_Fall_Finance + P1_Spring_Finance + P2_Fall_Finance + \n",
+    "                      P1_Spring_Finance + P3_Fall_Finance + P3_Spring_Finance >= 4,\n",
+    "                      'Four sections of finance per year')\n",
+    "professor_problem += (P1_Fall_Production + P1_Spring_Production + P2_Fall_Production + \n",
+    "                      P2_Spring_Production + P3_Fall_Production + P3_Spring_Production >= 4,\n",
+    "                      'Four sections of production per year')\n",
+    "\n",
     "\n",
     "# solve the problem\n",
-    "napkin_prob.writeLP(\"napkin_prob.lp\")\n",
-    "napkin_prob.solve(GLPK(msg=0))\n",
-    "print (\"Status:\", LpStatus[napkin_prob.status])\n",
+    "professor_problem.writeLP(\"professor_problem.lp\")\n",
+    "professor_problem.solve(GLPK(msg=0))\n",
+    "print (\"Status:\", LpStatus[professor_problem.status])\n",
     "\n",
     "# Note, we are only able to get sensitivity information because we are solving\n",
     "# as a linear program.  If we solved as an Integer Program, then no \n",
     "# sensitivity information would be available.\n",
-    "print (\"Objective\", value(napkin_prob.objective))\n",
-    "for v in napkin_prob.variables():\n",
+    "print (\"Objective\", value(professor_problem.objective))\n",
+    "for v in professor_problem.variables():\n",
     "    print(v.name, \"=\", v.varValue)\n",
-    "print (\"\")"
+    "print (\"\")\n"
    ]
   }
  ],
