adding senstivity analysis

--- a/Homework Assignment 2.ipynb
+++ b/Homework Assignment 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b4a1c872",
+   "id": "76655cfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e60a06",
+   "id": "ab59d965",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8250f72e",
+   "id": "58259620",
    "metadata": {},
    "source": [
     "1B.  Given the following information for a product-mix problem with three products and three resources. \n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca71117a",
+   "id": "1c91bc03",
    "metadata": {},
    "source": [
     "# Question 2: \n",
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8df447b5",
+   "execution_count": 21,
+   "id": "b2bb98f6",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
     "\n",
     "# solve the problem\n",
     "prob2.writeLP(\"prob2.lp\")\n",
-    "prob2.solve(GLPK(msg=0, options=['--ranges', 'prob2.sen']))\n",
+    "prob2.solve(GLPK(msg=0, options=['--ranges', 'homework_2_prob2.sen']))\n",
     "print (\"Status:\", LpStatus[prob2.status])\n",
     "\n",
     "# Note, we are only able to get sensitivity information because we are solving\n",
@@ -230,17 +230,19 @@
     "    print(v.name, \"=\", v.varValue)\n",
     "print (\"\")\n",
     "\n",
-    "f = open(\"prob2.sen\", \"r\")\n",
+    "f = open(\"homework_2_prob2.sen\", \"r\")\n",
     "print(f.read())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b1bb26e7",
+   "id": "8806b598",
    "metadata": {},
    "source": [
     "__Part C:  Answer the following questions from your output.  (Note, do not simply rerun the model – use the Linear \n",
-    "Programming output and Sensitivity Analysis to explain your answers.)__     \n",
+    "Programming output and Sensitivity Analysis to explain your answers.)__  \n",
+    "Note: m\n",
+    "\n",
     "i)  If cars contributed \\\\$310 to profit, what would be the new optimal solution to the problem?     \n",
     "* Since the objective range coefficient is between 0 and 320, in this case, increasing it to 310 will not change the number of cars or trucks produced, it will simply increase the profit.  So, since we are producing 88 cars in this model and we increased car profit by $10, 88 * 10 = 880, so the new profit/optimal solution would be \\\\$32540 + \\\\$880 = __\\\\$33420__\n",
     "\n",
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "224aa30b",
+   "id": "06db0b48",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -280,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "400d7262",
+   "id": "5fa2b8df",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd39ec3b",
+   "id": "019b1a18",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -409,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "22765a3f",
+   "id": "cc118ac7",
    "metadata": {},
    "outputs": [
     {
