--- a/Homework Assignment 2.ipynb
+++ b/Homework Assignment 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76655cfe",
+   "id": "4379a67c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab59d965",
+   "id": "6700519f",
    "metadata": {},
    "source": [
     "# Question 1: \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58259620",
+   "id": "1d328478",
    "metadata": {},
    "source": [
     "1B.  Given the following information for a product-mix problem with three products and three resources. \n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c91bc03",
+   "id": "3d6ddf82",
    "metadata": {},
    "source": [
     "# Question 2: \n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b2bb98f6",
+   "id": "0c580332",
    "metadata": {},
    "outputs": [
     {
@@ -236,34 +236,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8806b598",
+   "id": "4974f19e",
    "metadata": {},
    "source": [
     "__Part C:  Answer the following questions from your output.  (Note, do not simply rerun the model – use the Linear \n",
     "Programming output and Sensitivity Analysis to explain your answers.)__  \n",
-    "Note: m\n",
+    "Note: You can find an easier to read version of my sensitivity analysis here: https://raw.githubusercontent.com/robords/basic_linear_programming/main/homework_2_prob2.sen\n",
     "\n",
-    "i)  If cars contributed \\\\$310 to profit, what would be the new optimal solution to the problem?     \n",
-    "* Since the objective range coefficient is between 0 and 320, in this case, increasing it to 310 will not change the number of cars or trucks produced, it will simply increase the profit.  So, since we are producing 88 cars in this model and we increased car profit by $10, 88 * 10 = 880, so the new profit/optimal solution would be \\\\$32540 + \\\\$880 = __\\\\$33420__\n",
+    "__i)__  If cars contributed \\\\$310 to profit, what would be the new optimal solution to the problem?     \n",
+    "__Answer:__  Since the objective range coefficient is between 0 and 320, in this case, increasing it to 310 will not change the number of cars or trucks produced, it will simply increase the profit.  So, since we are producing 88 cars in this model and we increased car profit by $10, 88 * 10 = 880, so the new profit/optimal solution would be \\\\$32540 + \\\\$880 = __\\\\$33420__\n",
     "\n",
-    "ii) What is the most that Carco should be willing to pay to rent an additional Type 1 machine for 1 day?    \n",
-    "\\\\$350, since the shadow price in the sensitivity report provides this.  This means that any additional unit for one day of Type 1 machines will result in an increase optimal value of \\\\$350.  This is only valid for one additional unit.\n",
+    "__ii)__ What is the most that Carco should be willing to pay to rent an additional Type 1 machine for 1 day?    \n",
+    "__Answer:__ \\\\$350, since the shadow price in the sensitivity report provides this.  This means that any additional unit for one day of Type 1 machines will result in an increase optimal value of \\\\$350.  This is only valid for one additional unit.\n",
     "\n",
-    "iii) What is the most that Carco should be willing to pay for an extra ton of steel?   \n",
-    "Nothing, since it will not impact the optimum value - the shadow price for steel is null.\n",
+    "__iii)__ What is the most that Carco should be willing to pay for an extra ton of steel?   \n",
+    "__Answer:__ Nothing, since it will not impact the optimum value - the shadow price for steel is null.\n",
     "\n",
-    "iv) If Carco were required to produce at least 86 cars, what would Carco’s profit become?    \n",
-    "It would increase by \\\\$40 to \\\\$32580, since we would produce more trucks.  Trucks are more profitable.  This is shown in the `Marketing_considerations_dictate_that_at_least_88_cars_be_produced` constraint, where each unit decrease for a car in this constraint, increases the objective by \\\\$20.\n",
+    "__iv)__ If Carco were required to produce at least 86 cars, what would Carco’s profit become?    \n",
     "\n",
-    "v) Carco is considering producing jeeps.  A jeep contributes \\\\$600 to profit and requires 1.2 days on machine 1, 2 \n",
-    "days on machine 2, and 4 tons of steel.  Should Carco produce any jeeps?  \n",
+    "__Answer:__ It would increase by \\\\$40 to \\\\$32580, since we would produce more trucks.  Trucks are more profitable.  This is shown in the `Marketing_considerations_dictate_that_at_least_88_cars_be_produced` constraint, where each unit decrease for a car in this constraint, increases the objective by \\\\$20.\n",
     "\n",
-    "No - the machine hours are too \"expensive\" in this case, as can be seen in the dual"
+    "__v)__ Carco is considering producing jeeps.  A jeep contributes \\\\$600 to profit and requires 1.2 days on machine 1, 2 \n",
+    "days on machine 2, and 4 tons of steel.  Should Carco produce any jeeps  \n",
+    "\n",
+    "__Answer:__ No - the machine hours are too \"expensive\" in this case, as can be seen in the dual"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "06db0b48",
+   "id": "82305f39",
    "metadata": {},
    "source": [
     "## Question 3: \n",
@@ -282,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5fa2b8df",
+   "id": "0268fe38",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "019b1a18",
+   "id": "19b019bc",
    "metadata": {},
    "source": [
     "## Question 4: \n",
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cc118ac7",
+   "id": "e1b1a9c1",
    "metadata": {},
    "outputs": [
     {
