adding value to volume ratio

--- a/Discussion 5 - Knapsack IP Problem.ipynb
+++ b/Discussion 5 - Knapsack IP Problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6fb78ced",
+   "id": "64b33e98",
    "metadata": {},
    "source": [
     "You are moving from New Jersey to California and have rented a truck that can haul up to 1,100 cubic feet of furniture.  The volume and value of each item you are considering moving on the truck is given below. \n",
@@ -22,8 +22,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9263c640",
+   "execution_count": 41,
+   "id": "c43225af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0.08: 'Dining Room Set',\n",
+       " 0.0775: 'Sofa',\n",
+       " 0.075: 'Bedroom Set',\n",
+       " 0.05: 'TV',\n",
+       " 0.04666666666666667: 'Gaming Computer'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Just sorting by the value to volume ratio:\n",
+    "\n",
+    "key_values = [14/300, 60/800, 48/600, 31/400, 10/200]\n",
+    "items = ['Gaming Computer', 'Bedroom Set', 'Dining Room Set', 'Sofa', 'TV']\n",
+    "\n",
+    "ca_item_dict = {key_values[i]: items[i] for i in range(len(key_values))}\n",
+    "     \n",
+    "sorted_keys = sorted(key_values, reverse=True)\n",
+    "sorted_dict = {i: ca_item_dict[i] for i in sorted_keys}\n",
+    "\n",
+    "sorted_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fa2fff59",
    "metadata": {},
    "outputs": [
     {
@@ -31,12 +66,13 @@
      "output_type": "stream",
      "text": [
       "Knapsack NJ to CA Problem\n",
+      "Objective = $79\n",
       "status=Optimal\n",
-      "x1 = 1\n",
-      "x2 = 0\n",
-      "x3 = 1\n",
-      "x4 = 1\n",
-      "Objective = 42\n",
+      "bedroom_set = 0\n",
+      "dining_room_set = 1\n",
+      "gaming_computer = 0\n",
+      "sofa = 1\n",
+      "tv = 0\n",
       "\n"
      ]
     },
@@ -71,19 +107,21 @@
     "# solve the problem\n",
     "status = nj_to_ca.solve(GLPK(msg=0))\n",
     "print(f\"Knapsack NJ to CA Problem\")\n",
+    "\n",
+    "print(f\"Objective = ${value(nj_to_ca.objective)}\")\n",
+    "\n",
     "print(f\"status={LpStatus[status]}\")\n",
     "# print the results\n",
     "for variable in nj_to_ca.variables():\n",
     "    print(f\"{variable.name} = {variable.varValue}\")\n",
     "    \n",
-    "print(f\"Objective = {value(nj_to_ca.objective)}\")\n",
     "print(f\"\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b2a517c",
+   "id": "1949c7b1",
    "metadata": {},
    "outputs": [],
    "source": []
