--- a/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
+++ b/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "41c351f5",
+   "id": "7ba62149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01dd0d62",
+   "id": "d99e6420",
    "metadata": {},
    "source": [
     "References\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4beb2ec0",
+   "id": "e45256d1",
    "metadata": {},
    "source": [
     "# 1.  \n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "20ae1882",
+   "id": "f602c006",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "701082ea",
+   "id": "9fb0bfd6",
    "metadata": {},
    "source": [
     "# 2.  \n",
@@ -129,8 +129,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "13efb01e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Objective: 15.0\n",
+      "173.20508075688707\n",
+      "Final Objective: 179.99999999999912\n",
+      "Solution\n",
+      "x1 = 19.999999999999964\n",
+      "x2 = 19.99999999999996\n",
+      "x3 = 19.99999999999996\n"
+     ]
+    }
+   ],
+   "source": [
+    "def triangle_area(x, *args):\n",
+    "    '''\n",
+    "    a, b, and c are the side of a triangle\n",
+    "    s is half the perimeter of the triangle\n",
+    "    '''\n",
+    "    a, b, c = x\n",
+    "    s = (a + b + c) / 2\n",
+    "    area = np.sqrt(s * (s - a) * (s - b) * (s - c))\n",
+    "    return -area\n",
+    "\n",
+    "def triangle_constraint(x):\n",
+    "    a, b, c = x\n",
+    "    return [60 - (a + b + c), a + b - c, a + c - b, b + c - a, a, b, c]\n",
+    "\n",
+    "x0 = [10, 10, 10] # initial guess for the lengths of the sides\n",
+    "\n",
+    "# show initial objective\n",
+    "print('Initial Objective: ' + str(objective(x0)))\n",
+    "\n",
+    "# optimize\n",
+    "b = (0.0, 60)\n",
+    "bnds = (b, b, b) ## greater than 0 constraints\n",
+    "con1 = {'type': 'ineq', 'fun': triangle_constraint}\n",
+    "cons = ([con1])\n",
+    "solution = minimize(triangle_area, x0, method='SLSQP', bounds=bnds, constraints=cons)\n",
+    "a, b, c = solution.x\n",
+    "\n",
+    "area = triangle_area(solution.x) * -1\n",
+    "print(area)\n",
+    "\n",
+    "# show final objective\n",
+    "print('Final Objective: ' + str(objective(x)))\n",
+    "\n",
+    "# print solution\n",
+    "print('Solution')\n",
+    "print('x1 = ' + str(a))\n",
+    "print('x2 = ' + str(b))\n",
+    "print('x3 = ' + str(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f091d535",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lengths of the sides of the triangle are: a = 19.999999999999964, b = 19.99999999999996, c = 19.99999999999996\n",
+      "The area of the triangle is: 173.20508075688707\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = minimize(triangle_area, x0, method='SLSQP', constraints=[{\"type\": \"ineq\", \"fun\": triangle_constraint}])\n",
+    "\n",
+    "a, b, c = result.x\n",
+    "s = (a + b + c) / 2\n",
+    "area = np.sqrt(s * (s - a) * (s - b) * (s - c))\n",
+    "\n",
+    "print(\"The lengths of the sides of the triangle are: a = {}, b = {}, c = {}\".format(a, b, c))\n",
+    "print(\"The area of the triangle is: {}\".format(area))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eb12e03f",
+   "id": "91c779f2",
    "metadata": {},
    "outputs": [],
    "source": []
